--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.1.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
